--- a/fe-web/render/body/homepage.hbs
+++ b/fe-web/render/body/homepage.hbs
@@ -317,10 +317,10 @@
 </style>
 <style>
     .fb-icon {
-        width: 65px;
         position: absolute;
-        bottom: -7px;
+        bottom: -2.5vmin;
         left: 16.25vmin;
+        width: 17.5vmin;
     }
 
 </style>
