--- a/fe-web/render/body/homepage.hbs
+++ b/fe-web/render/body/homepage.hbs
@@ -316,6 +316,250 @@
 
 </style>
 <style>
+    @-webkit-keyframes   equalize {
+        0% {
+            height: 5vmin;
+        }
+        4% {
+            height: 2.5vmin;
+        }
+        8% {
+            height: 5vmin;
+        }
+        12% {
+            height: 8.75vmin;
+        }
+        16% {
+            height: 12.5vmin;
+        }
+        20% {
+            height: 16.25vmin;
+        }
+        24% {
+            height: 15vmin;
+        }
+        28% {
+            height: 13.75vmin;
+        }
+        32% {
+            height: 13.75vmin;
+        }
+        36% {
+            height: 10vmin;
+        }
+        40% {
+            height: 12.5vmin;
+        }
+        44% {
+            height: 12.5vmin;
+        }
+        48% {
+            height: 13.75vmin;
+        }
+        52% {
+            height: 15vmin;
+        }
+        56% {
+            height: 16.25vmin;
+        }
+        60% {
+            height: 15vmin;
+        }
+        64% {
+            height: 15vmin;
+        }
+        68% {
+            height: 13.75vmin;
+        }
+        72% {
+            height: 12.5vmin;
+        }
+        76% {
+            height: 13.75vmin;
+        }
+        80% {
+            height: 15vmin;
+        }
+        84% {
+            height: 15vmin;
+        }
+        88% {
+            height: 16.25vmin;
+        }
+        92% {
+            height: 12.5vmin;
+        }
+        96% {
+            height: 8.75vmin;
+        }
+        100% {
+            height: 5vmin;
+        }
+    }
+
+    @-webkit-keyframes  equalize2 {
+        0% {
+            height: 15vmin;
+        }
+        4% {
+            height: 16.25vmin;
+        }
+        8% {
+            height: 15vmin;
+        }
+        12% {
+            height: 15vmin;
+        }
+        16% {
+            height: 13.75vmin;
+        }
+        20% {
+            height: 13.75vmin;
+        }
+        24% {
+            height: 13.75vmin;
+        }
+        28% {
+            height: 15vmin;
+        }
+        32% {
+            height: 15vmin;
+        }
+        36% {
+            height: 16.25vmin;
+        }
+        40% {
+            height: 16.25vmin;
+        }
+        44% {
+            height: 16.25vmin;
+        }
+        48% {
+            height: 13.75vmin;
+        }
+        52% {
+            height: 10vmin;
+        }
+        56% {
+            height: 7.5vmin;
+        }
+        60% {
+            height: 10vmin;
+        }
+        64% {
+            height: 12.5vmin;
+        }
+        68% {
+            height: 13.75vmin;
+        }
+        72% {
+            height: 16.25vmin;
+        }
+        76% {
+            height: 15vmin;
+        }
+        80% {
+            height: 15vmin;
+        }
+        84% {
+            height: 13.75vmin;
+        }
+        88% {
+            height: 13.75vmin;
+        }
+        92% {
+            height: 11.25vmin;
+        }
+        96% {
+            height: 13.75vmin;
+        }
+        100% {
+            height: 15vmin;
+        }
+    }
+
+    @-webkit-keyframes  equalize3 {
+        0% {
+            height: 11.25vmin;
+        }
+        4% {
+            height: 8.75vmin;
+        }
+        8% {
+            height: 11.25vmin;
+        }
+        12% {
+            height: 13.75vmin;
+        }
+        16% {
+            height: 16.25vmin;
+        }
+        20% {
+            height: 18.75vmin;
+        }
+        24% {
+            height: 17.5vmin;
+        }
+        28% {
+            height: 13.75vmin;
+        }
+        32% {
+            height: 11.25vmin;
+        }
+        36% {
+            height: 10vmin;
+        }
+        40% {
+            height: 8.75vmin;
+        }
+        44% {
+            height: 6.25vmin;
+        }
+        48% {
+            height: 10vmin;
+        }
+        52% {
+            height: 12.5vmin;
+        }
+        56% {
+            height: 13.75vmin;
+        }
+        60% {
+            height: 16.25vmin;
+        }
+        64% {
+            height: 15vmin;
+        }
+        68% {
+            height: 13.75vmin;
+        }
+        72% {
+            height: 13.75vmin;
+        }
+        76% {
+            height: 12.5vmin;
+        }
+        80% {
+            height: 15vmin;
+        }
+        84% {
+            height: 16.25vmin;
+        }
+        88% {
+            height: 17.5vmin;
+        }
+        92% {
+            height: 15vmin;
+        }
+        96% {
+            height: 12.5vmin;
+        }
+        100% {
+            height: 11.25vmin;
+        }
+    }
+</style>
+<style>
     .fb-icon {
         position: absolute;
         bottom: -2.5vmin;
