--- a/fe-web/render/layout/index.hbs
+++ b/fe-web/render/layout/index.hbs
@@ -9,20 +9,10 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="red">
-    <meta name="author" content="Stone Bridge Studio"/>
-    <meta name="description" content="This place got something."/>
-    <meta property='og:title'  content="Stone Bridge Studio" />
-    <meta property="og:url" content="http://www.stonebridgestudio.it"/>
-    <meta property="og:site_name" content="Stone Bridge Studio"/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:description" content="This place got something.">
-    <meta property="og:image" content="http://www.stonebridgestudio.it/static/img/profile.jpg" />
 
-
-    <title>
-        Stone Bridge Studio
-    </title>
+    {{> metatags}}
     {{> stylesheet}}
+
 </head>
 <body>
 {{> header}}
