--- a/cms/fe-web/render/layout/index.hbs
+++ b/cms/fe-web/render/layout/index.hbs
@@ -16,8 +16,11 @@
 </head>
 <body>
 {{> header}}
-<div id="barba-wrapper">
-    <div class="barba-container">
+<div class="body-ctr">
+    <div class="menu-ctr">
+        {{> menu}}
+    </div>
+    <div class="content-ctr">
         {{> body}}
     </div>
 </div>
