--- a/fe-web/render/body/homepage.hbs
+++ b/fe-web/render/body/homepage.hbs
@@ -1,3 +1,4 @@
+<a href="/contacts">contatti</a>
 <a href="https://www.facebook.com/Stonebridgerecords/">
     <div class="home">
         <div class="equalizer-CTR">
