--- a/fe-web/render/include/header.hbs
+++ b/fe-web/render/include/header.hbs
@@ -1,3 +1,18 @@
 <header class="header">
+    <div class="text-ctr">
+        <div class="equalizer-CTR">
+            <div class="bar-c">
+                <div id="bar-1" class="bar"></div>
+                <div id="bar-2" class="bar"></div>
+                <div id="bar-3" class="bar"></div>
+                <div id="bar-4" class="bar"></div>
+                <div id="bar-5" class="bar"></div>
+                <div id="bar-6" class="bar"></div>
+            </div>
+        </div>
 
+        <h1 class="title">
+            Stonebridge Studio
+        </h1>
+    </div>
 </header>
