--- a/fe-web/render/include/stylesheet.hbs
+++ b/fe-web/render/include/stylesheet.hbs
@@ -1,1 +1,2 @@
+<link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:400,500" rel="stylesheet">
 <link href="/static/css/index.css" rel="stylesheet">
