--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,788 +1,568 @@
-.fb-icon {
-  position: absolute;
-  bottom: -2.5vmin;
-  left: 16.25vmin;
-  width: 17.5vmin;
-}
-@-webkit-keyframes equalize {
-  0% {
-    height: 5vmin;
-  }
-  4% {
-    height: 2.5vmin;
-  }
-  8% {
-    height: 5vmin;
-  }
-  12% {
-    height: 8.75vmin;
-  }
-  16% {
-    height: 12.5vmin;
-  }
-  20% {
-    height: 16.25vmin;
-  }
-  24% {
-    height: 15vmin;
-  }
-  28% {
-    height: 13.75vmin;
-  }
-  32% {
-    height: 13.75vmin;
-  }
-  36% {
-    height: 10vmin;
-  }
-  40% {
-    height: 12.5vmin;
-  }
-  44% {
-    height: 12.5vmin;
-  }
-  48% {
-    height: 13.75vmin;
-  }
-  52% {
-    height: 15vmin;
-  }
-  56% {
-    height: 16.25vmin;
-  }
-  60% {
-    height: 15vmin;
-  }
-  64% {
-    height: 15vmin;
-  }
-  68% {
-    height: 13.75vmin;
-  }
-  72% {
-    height: 12.5vmin;
-  }
-  76% {
-    height: 13.75vmin;
-  }
-  80% {
-    height: 15vmin;
-  }
-  84% {
-    height: 15vmin;
-  }
-  88% {
-    height: 16.25vmin;
-  }
-  92% {
-    height: 12.5vmin;
-  }
-  96% {
-    height: 8.75vmin;
-  }
-  100% {
-    height: 5vmin;
-  }
-}
-@-webkit-keyframes equalize2 {
-  0% {
-    height: 15vmin;
-  }
-  4% {
-    height: 16.25vmin;
-  }
-  8% {
-    height: 15vmin;
-  }
-  12% {
-    height: 15vmin;
-  }
-  16% {
-    height: 13.75vmin;
-  }
-  20% {
-    height: 13.75vmin;
-  }
-  24% {
-    height: 13.75vmin;
-  }
-  28% {
-    height: 15vmin;
-  }
-  32% {
-    height: 15vmin;
-  }
-  36% {
-    height: 16.25vmin;
-  }
-  40% {
-    height: 16.25vmin;
-  }
-  44% {
-    height: 16.25vmin;
-  }
-  48% {
-    height: 13.75vmin;
-  }
-  52% {
-    height: 10vmin;
-  }
-  56% {
-    height: 7.5vmin;
-  }
-  60% {
-    height: 10vmin;
-  }
-  64% {
-    height: 12.5vmin;
-  }
-  68% {
-    height: 13.75vmin;
-  }
-  72% {
-    height: 16.25vmin;
-  }
-  76% {
-    height: 15vmin;
-  }
-  80% {
-    height: 15vmin;
-  }
-  84% {
-    height: 13.75vmin;
-  }
-  88% {
-    height: 13.75vmin;
-  }
-  92% {
-    height: 11.25vmin;
-  }
-  96% {
-    height: 13.75vmin;
-  }
-  100% {
-    height: 15vmin;
-  }
-}
-@-webkit-keyframes equalize3 {
-  0% {
-    height: 11.25vmin;
-  }
-  4% {
-    height: 8.75vmin;
-  }
-  8% {
-    height: 11.25vmin;
-  }
-  12% {
-    height: 13.75vmin;
-  }
-  16% {
-    height: 16.25vmin;
-  }
-  20% {
-    height: 18.75vmin;
-  }
-  24% {
-    height: 17.5vmin;
-  }
-  28% {
-    height: 13.75vmin;
-  }
-  32% {
-    height: 11.25vmin;
-  }
-  36% {
-    height: 10vmin;
-  }
-  40% {
-    height: 8.75vmin;
-  }
-  44% {
-    height: 6.25vmin;
-  }
-  48% {
-    height: 10vmin;
-  }
-  52% {
-    height: 12.5vmin;
-  }
-  56% {
-    height: 13.75vmin;
-  }
-  60% {
-    height: 16.25vmin;
-  }
-  64% {
-    height: 15vmin;
-  }
-  68% {
-    height: 13.75vmin;
-  }
-  72% {
-    height: 13.75vmin;
-  }
-  76% {
-    height: 12.5vmin;
-  }
-  80% {
-    height: 15vmin;
-  }
-  84% {
-    height: 16.25vmin;
-  }
-  88% {
-    height: 17.5vmin;
-  }
-  92% {
-    height: 15vmin;
-  }
-  96% {
-    height: 12.5vmin;
-  }
-  100% {
-    height: 11.25vmin;
-  }
-}
-.equalizer {
-  position: absolute;
-  bottom: 16.25vmin;
-  left: 16.25vmin;
-  display: block;
-  width: 5vmin;
-  background-color: white;
-  height: 2.5vmin;
-}
-.equalizer,
-.equalizer::before,
-.equalizer::after {
-  -webkit-animation: equalize 1.25s steps(25, end) 0s infinite;
-  animation: equalize 1.25s steps(25, end) 0s infinite;
-}
-.equalizer::before,
-.equalizer::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 6.25vmin;
-  height: 17.5vmin;
-  width: 5vmin;
-  background-color: white;
-}
-.equalizer::before {
-  -webkit-animation-name: equalize2;
-  animation-name: equalize2;
-}
-.equalizer::after {
-  left: 12.5vmin;
-  -webkit-animation-name: equalize3;
-  animation-name: equalize3;
-}
-@-webkit-keyframes equalize {
-  0% {
-    height: 5vmin;
-  }
-  4% {
-    height: 2.5vmin;
-  }
-  8% {
-    height: 5vmin;
-  }
-  12% {
-    height: 8.75vmin;
-  }
-  16% {
-    height: 12.5vmin;
-  }
-  20% {
-    height: 16.25vmin;
-  }
-  24% {
-    height: 15vmin;
-  }
-  28% {
-    height: 13.75vmin;
-  }
-  32% {
-    height: 13.75vmin;
-  }
-  36% {
-    height: 10vmin;
-  }
-  40% {
-    height: 12.5vmin;
-  }
-  44% {
-    height: 12.5vmin;
-  }
-  48% {
-    height: 13.75vmin;
-  }
-  52% {
-    height: 15vmin;
-  }
-  56% {
-    height: 16.25vmin;
-  }
-  60% {
-    height: 15vmin;
-  }
-  64% {
-    height: 15vmin;
-  }
-  68% {
-    height: 13.75vmin;
-  }
-  72% {
-    height: 12.5vmin;
-  }
-  76% {
-    height: 13.75vmin;
-  }
-  80% {
-    height: 15vmin;
-  }
-  84% {
-    height: 15vmin;
-  }
-  88% {
-    height: 16.25vmin;
-  }
-  92% {
-    height: 12.5vmin;
-  }
-  96% {
-    height: 8.75vmin;
-  }
-  100% {
-    height: 5vmin;
-  }
-}
-@keyframes equalize {
-  0% {
-    height: 5vmin;
-  }
-  4% {
-    height: 2.5vmin;
-  }
-  8% {
-    height: 5vmin;
-  }
-  12% {
-    height: 8.75vmin;
-  }
-  16% {
-    height: 12.5vmin;
-  }
-  20% {
-    height: 16.25vmin;
-  }
-  24% {
-    height: 15vmin;
-  }
-  28% {
-    height: 13.75vmin;
-  }
-  32% {
-    height: 13.75vmin;
-  }
-  36% {
-    height: 10vmin;
-  }
-  40% {
-    height: 12.5vmin;
-  }
-  44% {
-    height: 12.5vmin;
-  }
-  48% {
-    height: 13.75vmin;
-  }
-  52% {
-    height: 15vmin;
-  }
-  56% {
-    height: 16.25vmin;
-  }
-  60% {
-    height: 15vmin;
-  }
-  64% {
-    height: 15vmin;
-  }
-  68% {
-    height: 13.75vmin;
-  }
-  72% {
-    height: 12.5vmin;
-  }
-  76% {
-    height: 13.75vmin;
-  }
-  80% {
-    height: 15vmin;
-  }
-  84% {
-    height: 15vmin;
-  }
-  88% {
-    height: 16.25vmin;
-  }
-  92% {
-    height: 12.5vmin;
-  }
-  96% {
-    height: 8.75vmin;
-  }
-  100% {
-    height: 5vmin;
-  }
-}
-@-webkit-keyframes equalize2 {
-  0% {
-    height: 15vmin;
-  }
-  4% {
-    height: 16.25vmin;
-  }
-  8% {
-    height: 15vmin;
-  }
-  12% {
-    height: 15vmin;
-  }
-  16% {
-    height: 13.75vmin;
-  }
-  20% {
-    height: 13.75vmin;
-  }
-  24% {
-    height: 13.75vmin;
-  }
-  28% {
-    height: 15vmin;
-  }
-  32% {
-    height: 15vmin;
-  }
-  36% {
-    height: 16.25vmin;
-  }
-  40% {
-    height: 16.25vmin;
-  }
-  44% {
-    height: 16.25vmin;
-  }
-  48% {
-    height: 13.75vmin;
-  }
-  52% {
-    height: 10vmin;
-  }
-  56% {
-    height: 7.5vmin;
-  }
-  60% {
-    height: 10vmin;
-  }
-  64% {
-    height: 12.5vmin;
-  }
-  68% {
-    height: 13.75vmin;
-  }
-  72% {
-    height: 16.25vmin;
-  }
-  76% {
-    height: 15vmin;
-  }
-  80% {
-    height: 15vmin;
-  }
-  84% {
-    height: 13.75vmin;
-  }
-  88% {
-    height: 13.75vmin;
-  }
-  92% {
-    height: 11.25vmin;
-  }
-  96% {
-    height: 13.75vmin;
-  }
-  100% {
-    height: 15vmin;
-  }
-}
-@keyframes equalize2 {
-  0% {
-    height: 15vmin;
-  }
-  4% {
-    height: 16.25vmin;
-  }
-  8% {
-    height: 15vmin;
-  }
-  12% {
-    height: 15vmin;
-  }
-  16% {
-    height: 13.75vmin;
-  }
-  20% {
-    height: 13.75vmin;
-  }
-  24% {
-    height: 13.75vmin;
-  }
-  28% {
-    height: 15vmin;
-  }
-  32% {
-    height: 15vmin;
-  }
-  36% {
-    height: 16.25vmin;
-  }
-  40% {
-    height: 16.25vmin;
-  }
-  44% {
-    height: 16.25vmin;
-  }
-  48% {
-    height: 13.75vmin;
-  }
-  52% {
-    height: 10vmin;
-  }
-  56% {
-    height: 7.5vmin;
-  }
-  60% {
-    height: 10vmin;
-  }
-  64% {
-    height: 12.5vmin;
-  }
-  68% {
-    height: 13.75vmin;
-  }
-  72% {
-    height: 16.25vmin;
-  }
-  76% {
-    height: 15vmin;
-  }
-  80% {
-    height: 15vmin;
-  }
-  84% {
-    height: 13.75vmin;
-  }
-  88% {
-    height: 13.75vmin;
-  }
-  92% {
-    height: 11.25vmin;
-  }
-  96% {
-    height: 13.75vmin;
-  }
-  100% {
-    height: 15vmin;
-  }
-}
-@-webkit-keyframes equalize3 {
-  0% {
-    height: 11.25vmin;
-  }
-  4% {
-    height: 8.75vmin;
-  }
-  8% {
-    height: 11.25vmin;
-  }
-  12% {
-    height: 13.75vmin;
-  }
-  16% {
-    height: 16.25vmin;
-  }
-  20% {
-    height: 18.75vmin;
-  }
-  24% {
-    height: 17.5vmin;
-  }
-  28% {
-    height: 13.75vmin;
-  }
-  32% {
-    height: 11.25vmin;
-  }
-  36% {
-    height: 10vmin;
-  }
-  40% {
-    height: 8.75vmin;
-  }
-  44% {
-    height: 6.25vmin;
-  }
-  48% {
-    height: 10vmin;
-  }
-  52% {
-    height: 12.5vmin;
-  }
-  56% {
-    height: 13.75vmin;
-  }
-  60% {
-    height: 16.25vmin;
-  }
-  64% {
-    height: 15vmin;
-  }
-  68% {
-    height: 13.75vmin;
-  }
-  72% {
-    height: 13.75vmin;
-  }
-  76% {
-    height: 12.5vmin;
-  }
-  80% {
-    height: 15vmin;
-  }
-  84% {
-    height: 16.25vmin;
-  }
-  88% {
-    height: 17.5vmin;
-  }
-  92% {
-    height: 15vmin;
-  }
-  96% {
-    height: 12.5vmin;
-  }
-  100% {
-    height: 11.25vmin;
-  }
-}
-@keyframes equalize3 {
-  0% {
-    height: 11.25vmin;
-  }
-  4% {
-    height: 8.75vmin;
-  }
-  8% {
-    height: 11.25vmin;
-  }
-  12% {
-    height: 13.75vmin;
-  }
-  16% {
-    height: 16.25vmin;
-  }
-  20% {
-    height: 18.75vmin;
-  }
-  24% {
-    height: 17.5vmin;
-  }
-  28% {
-    height: 13.75vmin;
-  }
-  32% {
-    height: 11.25vmin;
-  }
-  36% {
-    height: 10vmin;
-  }
-  40% {
-    height: 8.75vmin;
-  }
-  44% {
-    height: 6.25vmin;
-  }
-  48% {
-    height: 10vmin;
-  }
-  52% {
-    height: 12.5vmin;
-  }
-  56% {
-    height: 13.75vmin;
-  }
-  60% {
-    height: 16.25vmin;
-  }
-  64% {
-    height: 15vmin;
-  }
-  68% {
-    height: 13.75vmin;
-  }
-  72% {
-    height: 13.75vmin;
-  }
-  76% {
-    height: 12.5vmin;
-  }
-  80% {
-    height: 15vmin;
-  }
-  84% {
-    height: 16.25vmin;
-  }
-  88% {
-    height: 17.5vmin;
-  }
-  92% {
-    height: 15vmin;
-  }
-  96% {
-    height: 12.5vmin;
-  }
-  100% {
-    height: 11.25vmin;
-  }
-}
-.center-me {
-  position: absolute;
-  bottom: 70px;
-  left: 50%;
-  margin-top: -25vmin;
-  margin-left: -25vmin;
-  width: 50vmin;
-  height: 50vmin;
-}
-*,
-::before,
-::after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-.home {
-  background: url("/static/img/bg.jpg") 50% 50% no-repeat;
-  background-size: cover;
-  width: 100vw;
-  height: 100vh;
-}
-body {
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  box-sizing: border-box;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+.menu {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  padding: 40px 0;
+  background: #930f0a;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: all 400ms ease-out 0s;
+  transform: translateX(100%);
+}
+.menu-ctr {
+  position: relative;
+}
+.menu__title {
+  color: white;
+  text-transform: uppercase;
+  font-size: 11px;
+  margin-bottom: 30px;
+  padding: 0 40px;
+}
+.menu__item {
+  font-weight: bold;
+  font-size: 55px;
+  font-family: "Raleway";
+  text-transform: uppercase;
+  padding: 10px 120px 10px 40px;
+}
+.menu__item:hover {
+  background: rgba(255, 255, 255, 0.1);
+}
+.menu__item a {
+  color: white;
+}
+.is-navopen .menu {
+  transform: translateX(0);
+}
+.nav-trigger {
+  display: block;
+  position: fixed;
+  right: 0;
+  top: 0;
+  padding: 20px 21px;
+  z-index: 99;
+  background: rgba(88, 89, 91, 0.6);
+  cursor: pointer;
+  transition: all 0.5s ease-out;
+}
+.nav-trigger:hover {
+  background: rgba(88, 89, 91, 0.9);
+}
+.nav-trigger__elements {
+  display: block;
+  position: relative;
+  width: 18px;
+  height: 14px;
+  margin-left: 1px;
+}
+.nav-trigger__elements span {
+  width: 18px;
+  height: 2px;
+  position: absolute;
+  transform-origin: 0 50%;
+  transition-duration: 0.3s;
+  background: white;
+}
+.nav-trigger__elements span:nth-of-type(1) {
+  top: 0;
+  left: 0px;
+}
+.nav-trigger__elements span:nth-of-type(2) {
+  top: 6px;
+  opacity: 1;
+}
+.nav-trigger__elements span:last-of-type {
+  bottom: 0;
+  left: 0;
+}
+.is-navopen .nav-trigger {
+  background: transparent;
+}
+.is-navopen .nav-trigger span:nth-of-type(1) {
+  transform: rotate(45deg);
+}
+.is-navopen .nav-trigger span:nth-of-type(2) {
+  opacity: 0;
+}
+.is-navopen .nav-trigger span:last-of-type {
+  bottom: -1px;
+  transform: rotate(-45deg);
+}
+@media (max-width: 767px) {
+  .menu {
+    width: 100%;
+  }
+  .menu__item {
+    font-size: 24px;
+  }
+}
+.homepage__visual {
+  background: url("/static/img/bg.jpg") 50% 50% no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: calc(100vh - 54px);
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+}
+.homepage .visual__text {
+  color: white;
+  padding: 90px 13px;
+  font-size: 52px;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.8) 100%);
+  width: 100%;
+  font-family: "Raleway";
+}
+@media (max-width: 767px) {
+  .homepage .visual__text {
+    padding: 35px 13px;
+    font-size: 40px;
+  }
+}
+.post {
+  margin: 0;
+  position: relative;
+  cursor: pointer;
+  overflow: hidden;
+}
+.post__cnt {
+  position: relative;
+  font-size: 0;
+}
+.post-image-zoomed {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
+  background: transparent;
+  visibility: hidden;
+  z-index: 10;
+}
+.posts {
+  column-count: 3;
+  column-gap: 0;
+  font-size: 0;
+}
+.post:hover .post__image {
+  transform: scale(1.05);
+  filter: saturate(1);
+}
+.post:hover .post__text {
+  transform: translateY(0);
+}
+.post__image {
+  /* Just in case there are inline attributes */
+  width: 100%;
+  transition: all 0.5s ease-out;
+  display: block;
+  height: auto;
+  backface-visibility: hidden;
+  filter: saturate(0.6);
+}
+.post__image__wrapper {
   overflow: hidden;
+  backface-visibility: hidden;
+  margin: 0;
+}
+.post__image__over {
+  z-index: 1;
+  position: absolute;
+  filter: inherit;
+}
+.post__text {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+  color: white;
+  padding: 20px;
+  font-size: 16px;
+  line-height: 1.4;
+  flex-grow: 1;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  transform: translateY(100%);
+  transition: all 0.3s ease-out;
+}
+.post__text p {
+  max-height: 4.2em;
+  overflow: hidden;
+}
+.line-1 i,
+.line-3 i {
+  display: block;
+  position: absolute;
+  height: 100%;
+  width: 0;
+  background: white;
+}
+.line-1 {
+  left: 0;
+  top: 0;
+}
+.line-1 i {
+  left: 0;
+  top: 0;
+  transition: width 0.2s ease-out 0.6s;
+}
+.line-2 {
+  top: 0;
+  right: 0;
+}
+.line-2 i {
+  top: 0;
+  left: 0;
+  transition: height 0.2s ease-out 0.4s;
+}
+.line-3 {
+  right: 0;
+  bottom: 0;
+}
+.line-3 i {
+  right: 0;
+  top: 0;
+  transition: width 0.2s ease-out 0.2s;
+}
+.line-4 {
+  bottom: 0;
+  left: 0;
+}
+.line-4 i {
+  bottom: 0;
+  left: 0;
+  transition: height 0.2s ease-out 0s;
+}
+.line-2 i,
+.line-4 i {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 0;
+  background: white;
+}
+.line-1,
+.line-3 {
+  width: 100%;
+  height: 2px;
+  background: transparent;
+  position: absolute;
+  z-index: 1;
+}
+.line-2,
+.line-4 {
+  height: 100%;
+  width: 2px;
+  background: transparent;
+  position: absolute;
+  z-index: 1;
+}
+.post:hover .line-1 i {
+  width: 100%;
+  height: 100%;
+  transition: width 0.2s ease-out;
+}
+.post:hover .line-2 i {
+  width: 100%;
+  height: 100%;
+  transition: height 0.2s ease-out 0.2s;
+}
+.post:hover .line-3 i {
+  width: 100%;
+  height: 100%;
+  transition: width 0.2s ease-out 0.4s;
+}
+.post:hover .line-4 i {
+  width: 100%;
+  height: 100%;
+  transition: height 0.2s ease-out 0.6s;
+}
+@media (max-width: 767px) {
+  .posts {
+    column-count: 2;
+  }
+}
+.footer {
+  background: #463c44;
+  height: 300px;
+  margin-top: 50px;
+}
+.bar-c {
+  overflow: hidden;
+  height: 30px;
+  width: 40px;
+  margin: 0 auto;
+  position: relative;
+  cursor: pointer;
+}
+.bar {
+  height: 1px;
+  width: 3px;
+  display: inline-block;
+  background-color: #ffffd2;
+  bottom: 0;
+  position: absolute;
+  -webkit-animation-duration: 500ms;
+  -webkit-animation-play-state: running;
+  -webkit-animation-direction: alternate;
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+}
+.bar.noAnim {
+  -webkit-animation: none;
+  -webkit-animation-name: none;
+}
+.bar#bar-1 {
+  left: 0;
+  -webkit-animation-name: danceHeight1;
+  -webkit-animation-delay: 0ms;
+}
+.bar#bar-2 {
+  left: 6px;
+  -webkit-animation-name: danceHeight2;
+  -webkit-animation-delay: 300ms;
+}
+.bar#bar-3 {
+  left: 12px;
+  -webkit-animation-name: danceHeight3;
+  -webkit-animation-delay: 600ms;
+}
+.bar#bar-4 {
+  left: 18px;
+  -webkit-animation-name: danceHeight4;
+  -webkit-animation-delay: 900ms;
+}
+.bar#bar-5 {
+  left: 24px;
+  -webkit-animation-name: danceHeight5;
+  -webkit-animation-delay: 1200ms;
+}
+.bar#bar-6 {
+  left: 30px;
+  -webkit-animation-name: danceHeight6;
+  -webkit-animation-delay: 1500ms;
+}
+@-webkit-keyframes danceHeight1 {
+  from {
+    height: 1px;
+  }
+  to {
+    height: 22px;
+  }
+}
+@-webkit-keyframes danceHeight2 {
+  from {
+    height: 1px;
+  }
+  to {
+    height: 15px;
+  }
+}
+@-webkit-keyframes danceHeight3 {
+  from {
+    height: 1px;
+  }
+  to {
+    height: 30px;
+  }
+}
+@-webkit-keyframes danceHeight4 {
+  from {
+    height: 1px;
+  }
+  to {
+    height: 20px;
+  }
+}
+@-webkit-keyframes danceHeight5 {
+  from {
+    height: 1px;
+  }
+  to {
+    height: 15px;
+  }
+}
+@-webkit-keyframes danceHeight6 {
+  from {
+    height: 1px;
+  }
+  to {
+    height: 15px;
+  }
+}
+.header {
+  height: 54px;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+  background: #463c44;
+  display: flex;
+  justify-content: center;
+}
+.header .text-ctr {
+  font-size: 20px;
+  color: white;
+  text-transform: uppercase;
+}
+.header .text-ctr h1 {
+  padding: 0 5px;
+  line-height: 17px;
+}
+@media (max-width: 767px) {
+  .header .text-ctr {
+    font-size: 15px;
+  }
+}
+body,
+html {
+  font-family: 'Open Sans', sans-serif;
+  width: 100%;
+  overflow-x: hidden;
+}
+a {
+  text-decoration: none;
+}
+.content-wrapper {
+  max-width: 1280px;
+  margin: auto;
+}
+#barba-wrapper {
+  position: relative;
+  z-index: 0;
+  padding-top: 54px;
 }
