--- a/static/less/index.less
+++ b/static/less/index.less
@@ -1,4 +1,34 @@
-@import "_dirty";
-.homepage{
+@import "_reset";
+@import "_menu";
+@import "_homepage";
+@import "_posts";
+@import "_footer";
+@import "_header";
 
+
+body, html {
+  //font-family: 'Raleway', sans-serif;
+  font-family: 'Open Sans', sans-serif;
+  width: 100%;
+  overflow-x: hidden;
 }
+
+a {
+  text-decoration: none;
+}
+
+.content-wrapper {
+  max-width: 1280px;
+  margin: auto;
+}
+
+#barba-wrapper{
+  position: relative;
+  z-index: 0;
+  padding-top: 54px;
+}
+//body.fixed{
+//  height: 100vh;
+//
+//  overflow: hidden;
+//}
