--- a/fe-web/render/include/footer.hbs
+++ b/fe-web/render/include/footer.hbs
@@ -1,3 +1,25 @@
 <footer class="footer">
+    <ul class="buttons">
+        <li class="footer-social-button">
+            <a href="https://www.facebook.com/Stonebridgerecords/" rel="noopener" target="_blank">
 
+                <svg class="social-ico sprite facebook">
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#.sprite.facebook"></use>
+                </svg>
+
+            </a>
+        </li>
+
+        <li class="footer-social-button">
+            <a href="https://www.instagram.com/stonebridgestudio/" rel="noopener" target="_blank">
+                <svg class="social-ico sprite instagram">
+                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#.sprite.instagram"></use>
+                </svg>
+
+            </a>
+        </li>
+
+
+
+    </ul>
 </footer>
