--- a/static/less/_footer.less
+++ b/static/less/_footer.less
@@ -1,5 +1,26 @@
-.footer{
+.footer {
   background: #463c44;
   height: 300px;
   margin-top: 50px;
+  .buttons {
+    display: flex;
+    justify-content: flex-end;
+    padding: 20px;
+  }
+  .footer-social-button a {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    width: 30px;
+    height: 30px;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    background: white;
+    transition: background .5s ease-out;
+    margin: 0 10px;
+  }
 }
