--- a/static/less/index.less
+++ b/static/less/index.less
@@ -10,7 +10,7 @@ body, html {
   //font-family: 'Raleway', sans-serif;
   font-family: 'Open Sans', sans-serif;
   width: 100%;
-  overflow-x: hidden;
+  //overflow-x: hidden;
 }
 
 a {
