--- a/fe-web/render/include/footer.hbs
+++ b/fe-web/render/include/footer.hbs
@@ -1,5 +1,17 @@
 <footer class="footer">
     <ul class="buttons">
+        <li class="footer-social-button email">
+            <a href="tel:3336428194" rel="noopener"  >
+                tel: 333 642 8194
+            </a>
+        </li>
+        <li class="footer-social-button email">
+            <a href="mailto:stonebridgerecordings@gmail.com" rel="noopener"  >
+                stonebridgerecordings@gmail.com
+
+            </a>
+        </li>
+
         <li class="footer-social-button">
             <a href="https://www.facebook.com/Stonebridgerecords/" rel="noopener" target="_blank">
 
