--- a/static/css/_footer.css
+++ b/static/css/_footer.css
@@ -24,3 +24,9 @@
   transition: background 0.5s ease-out;
   margin: 0 10px;
 }
+.footer .footer-social-button.email a {
+  width: auto;
+  background: transparent;
+  color: white;
+  font-size: 12px;
+}
