--- a/static/less/_footer.less
+++ b/static/less/_footer.less
@@ -7,6 +7,7 @@
     justify-content: flex-end;
     padding: 20px;
   }
+
   .footer-social-button a {
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -22,5 +23,11 @@
     background: white;
     transition: background .5s ease-out;
     margin: 0 10px;
+  }
+  .footer-social-button.email a{
+    width: auto;
+    background: transparent;
+    color: white;
+    font-size: 12px;
   }
 }
