--- a/fe-web/render/include/footer.hbs
+++ b/fe-web/render/include/footer.hbs
@@ -1,35 +1,39 @@
 <footer class="footer">
     <ul class="buttons">
-        <li class="footer-social-button email">
+        <li class="footer-button text-only">
             <a href="tel:3336428194" rel="noopener"  >
                 tel: 333 642 8194
             </a>
         </li>
-        <li class="footer-social-button email">
+        <li class="footer-button text-only">
             <a href="mailto:stonebridgerecordings@gmail.com" rel="noopener"  >
                 stonebridgerecordings@gmail.com
 
             </a>
         </li>
+        <li class="footer-button social">
+           <ul class="social-buttons">
+               <li class="footer-social-button">
+                   <a href="https://www.facebook.com/Stonebridgerecords/" rel="noopener" target="_blank">
 
-        <li class="footer-social-button">
-            <a href="https://www.facebook.com/Stonebridgerecords/" rel="noopener" target="_blank">
+                       <svg class="social-ico sprite facebook">
+                           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#.sprite.facebook"></use>
+                       </svg>
 
-                <svg class="social-ico sprite facebook">
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#.sprite.facebook"></use>
-                </svg>
+                   </a>
+               </li>
 
-            </a>
+               <li class="footer-social-button">
+                   <a href="https://www.instagram.com/stonebridgestudio/" rel="noopener" target="_blank">
+                       <svg class="social-ico sprite instagram">
+                           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#.sprite.instagram"></use>
+                       </svg>
+
+                   </a>
+               </li>
+           </ul>
         </li>
 
-        <li class="footer-social-button">
-            <a href="https://www.instagram.com/stonebridgestudio/" rel="noopener" target="_blank">
-                <svg class="social-ico sprite instagram">
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#.sprite.instagram"></use>
-                </svg>
-
-            </a>
-        </li>
 
 
 
