--- a/static/less/index.less
+++ b/static/less/index.less
@@ -1,16 +1,17 @@
 @import "_reset";
+@import "_buttons";
+@import "_effect-lines";
 @import "_menu";
 @import "_homepage";
 @import "_posts";
 @import "_footer";
 @import "_header";
 
-
 body, html {
   //font-family: 'Raleway', sans-serif;
   font-family: 'Open Sans', sans-serif;
   width: 100%;
-  //overflow-x: hidden;
+  color: #463c44;
 }
 
 a {
@@ -18,15 +19,17 @@ a {
 }
 
 .content-wrapper {
-  max-width: 1280px;
-  margin: auto;
+  max-width: 1280px + 26px;
+  padding: 0 13px;
+  margin: 0 auto;
 }
 
-#barba-wrapper{
+#barba-wrapper {
   position: relative;
   z-index: 0;
   padding-top: 54px;
 }
+
 //body.fixed{
 //  height: 100vh;
 //
