--- a/static/css/_footer.css
+++ b/static/css/_footer.css
@@ -6,7 +6,20 @@
 .footer .buttons {
   display: flex;
   justify-content: flex-end;
-  padding: 20px;
+  padding: 13px;
+  align-items: flex-end;
+}
+.footer .footer-button {
+  text-align: right;
+}
+.footer .footer-button.text-only {
+  margin: 0 10px;
+}
+.footer .footer-button a {
+  width: auto;
+  background: transparent;
+  color: white;
+  font-size: 12px;
 }
 .footer .footer-social-button a {
   display: -webkit-flex;
@@ -24,9 +37,20 @@
   transition: background 0.5s ease-out;
   margin: 0 10px;
 }
-.footer .footer-social-button.email a {
-  width: auto;
-  background: transparent;
-  color: white;
-  font-size: 12px;
+.footer .social-buttons {
+  display: flex;
+  justify-content: flex-end;
+  padding: 0;
+  margin-top: 10px;
+}
+@media (max-width: 767px) {
+  .footer .buttons {
+    display: block;
+  }
+  .footer-button {
+    padding: 5px 0;
+  }
+  .footer .social-buttons {
+    margin-top: 10px;
+  }
 }
