--- a/static/css/_homepage.css
+++ b/static/css/_homepage.css
@@ -2,22 +2,43 @@
   background: url("/static/img/bg.jpg") 50% 50% no-repeat;
   background-size: cover;
   width: 100%;
-  height: calc(100vh - 54px);
+  height: calc(100vh - 254px);
   position: relative;
   display: flex;
   align-items: flex-end;
 }
+.homepage__visual::after {
+  content: "";
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.8) 100%);
+  display: block;
+  width: 100%;
+  height: 200px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+}
+.homepage__visual .content-wrapper {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+}
 .homepage .visual__text {
   color: white;
-  padding: 90px 13px;
+  padding: 50px 0;
   font-size: 52px;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.8) 100%);
-  width: 100%;
   font-family: "Raleway";
+}
+.homepage .posts-ctr {
+  margin-top: 30px;
+}
+.homepage .posts-ctr .btn-ctr {
+  text-align: center;
+  margin: 20px 0;
 }
 @media (max-width: 767px) {
   .homepage .visual__text {
-    padding: 35px 13px;
+    padding: 35px 0;
     font-size: 40px;
   }
 }
