--- a/static/css/index.css
+++ b/static/css/index.css
@@ -127,6 +127,110 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+.btn {
+  display: inline-block;
+  padding: 20px;
+  color: black;
+  font-weight: bold;
+  transition: color 0.4s ease-out;
+}
+.btn.line-effect i {
+  background: #463c44;
+}
+.btn:hover {
+  color: #463c44;
+}
+.line-1 i,
+.line-3 i {
+  display: block;
+  position: absolute;
+  height: 100%;
+  width: 0;
+  background: white;
+}
+.line-1 {
+  left: 0;
+  top: 0;
+}
+.line-1 i {
+  left: 0;
+  top: 0;
+  transition: width 0.2s ease-out 0.6s;
+}
+.line-2 {
+  top: 0;
+  right: 0;
+}
+.line-2 i {
+  top: 0;
+  left: 0;
+  transition: height 0.2s ease-out 0.4s;
+}
+.line-3 {
+  right: 0;
+  bottom: 0;
+}
+.line-3 i {
+  right: 0;
+  top: 0;
+  transition: width 0.2s ease-out 0.2s;
+}
+.line-4 {
+  bottom: 0;
+  left: 0;
+}
+.line-4 i {
+  bottom: 0;
+  left: 0;
+  transition: height 0.2s ease-out 0s;
+}
+.line-2 i,
+.line-4 i {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 0;
+  background: white;
+}
+.line-1,
+.line-3 {
+  width: 100%;
+  height: 2px;
+  background: transparent;
+  position: absolute;
+  z-index: 1;
+}
+.line-2,
+.line-4 {
+  height: 100%;
+  width: 2px;
+  background: transparent;
+  position: absolute;
+  z-index: 1;
+}
+.line-effect {
+  position: relative;
+}
+.line-effect:hover .line-1 i {
+  width: 100%;
+  height: 100%;
+  transition: width 0.2s ease-out;
+}
+.line-effect:hover .line-2 i {
+  width: 100%;
+  height: 100%;
+  transition: height 0.2s ease-out 0.2s;
+}
+.line-effect:hover .line-3 i {
+  width: 100%;
+  height: 100%;
+  transition: width 0.2s ease-out 0.4s;
+}
+.line-effect:hover .line-4 i {
+  width: 100%;
+  height: 100%;
+  transition: height 0.2s ease-out 0.6s;
+}
 .menu {
   position: fixed;
   z-index: 1;
@@ -233,22 +337,43 @@ table {
   background: url("/static/img/bg.jpg") 50% 50% no-repeat;
   background-size: cover;
   width: 100%;
-  height: calc(100vh - 54px);
+  height: calc(100vh - 254px);
   position: relative;
   display: flex;
   align-items: flex-end;
 }
+.homepage__visual::after {
+  content: "";
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.8) 100%);
+  display: block;
+  width: 100%;
+  height: 200px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 0;
+}
+.homepage__visual .content-wrapper {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+}
 .homepage .visual__text {
   color: white;
-  padding: 90px 13px;
+  padding: 50px 0;
   font-size: 52px;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.8) 100%);
-  width: 100%;
   font-family: "Raleway";
+}
+.homepage .posts-ctr {
+  margin-top: 30px;
+}
+.homepage .posts-ctr .btn-ctr {
+  text-align: center;
+  margin: 20px 0;
 }
 @media (max-width: 767px) {
   .homepage .visual__text {
-    padding: 35px 13px;
+    padding: 35px 0;
     font-size: 40px;
   }
 }
@@ -324,93 +449,10 @@ table {
   max-height: 4.2em;
   overflow: hidden;
 }
-.line-1 i,
-.line-3 i {
-  display: block;
-  position: absolute;
-  height: 100%;
-  width: 0;
-  background: white;
-}
-.line-1 {
-  left: 0;
-  top: 0;
-}
-.line-1 i {
-  left: 0;
-  top: 0;
-  transition: width 0.2s ease-out 0.6s;
-}
-.line-2 {
-  top: 0;
-  right: 0;
-}
-.line-2 i {
-  top: 0;
-  left: 0;
-  transition: height 0.2s ease-out 0.4s;
-}
-.line-3 {
-  right: 0;
-  bottom: 0;
-}
-.line-3 i {
-  right: 0;
-  top: 0;
-  transition: width 0.2s ease-out 0.2s;
-}
-.line-4 {
-  bottom: 0;
-  left: 0;
-}
-.line-4 i {
-  bottom: 0;
-  left: 0;
-  transition: height 0.2s ease-out 0s;
-}
-.line-2 i,
-.line-4 i {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 0;
-  background: white;
-}
-.line-1,
-.line-3 {
-  width: 100%;
-  height: 2px;
-  background: transparent;
-  position: absolute;
-  z-index: 1;
-}
-.line-2,
-.line-4 {
-  height: 100%;
-  width: 2px;
-  background: transparent;
-  position: absolute;
-  z-index: 1;
-}
-.post:hover .line-1 i {
-  width: 100%;
-  height: 100%;
-  transition: width 0.2s ease-out;
-}
-.post:hover .line-2 i {
-  width: 100%;
-  height: 100%;
-  transition: height 0.2s ease-out 0.2s;
-}
-.post:hover .line-3 i {
-  width: 100%;
-  height: 100%;
-  transition: width 0.2s ease-out 0.4s;
-}
-.post:hover .line-4 i {
-  width: 100%;
-  height: 100%;
-  transition: height 0.2s ease-out 0.6s;
+.posts-title {
+  margin-bottom: 30px;
+  font-size: 30px;
+  font-weight: bold;
 }
 @media (max-width: 767px) {
   .posts {
@@ -425,7 +467,20 @@ table {
 .footer .buttons {
   display: flex;
   justify-content: flex-end;
-  padding: 20px;
+  padding: 13px;
+  align-items: flex-end;
+}
+.footer .footer-button {
+  text-align: right;
+}
+.footer .footer-button.text-only {
+  margin: 0 10px;
+}
+.footer .footer-button a {
+  width: auto;
+  background: transparent;
+  color: white;
+  font-size: 12px;
 }
 .footer .footer-social-button a {
   display: -webkit-flex;
@@ -443,11 +498,22 @@ table {
   transition: background 0.5s ease-out;
   margin: 0 10px;
 }
-.footer .footer-social-button.email a {
-  width: auto;
-  background: transparent;
-  color: white;
-  font-size: 12px;
+.footer .social-buttons {
+  display: flex;
+  justify-content: flex-end;
+  padding: 0;
+  margin-top: 10px;
+}
+@media (max-width: 767px) {
+  .footer .buttons {
+    display: block;
+  }
+  .footer-button {
+    padding: 5px 0;
+  }
+  .footer .social-buttons {
+    margin-top: 10px;
+  }
 }
 .bar-c {
   overflow: hidden;
@@ -579,13 +645,15 @@ body,
 html {
   font-family: 'Open Sans', sans-serif;
   width: 100%;
+  color: #463c44;
 }
 a {
   text-decoration: none;
 }
 .content-wrapper {
-  max-width: 1280px;
-  margin: auto;
+  max-width: 1306px;
+  padding: 0 13px;
+  margin: 0 auto;
 }
 #barba-wrapper {
   position: relative;
