--- a/static/less/_homepage.less
+++ b/static/less/_homepage.less
@@ -3,27 +3,49 @@
     background: url("/static/img/bg.jpg") 50% 50% no-repeat;
     background-size: cover;
     width: 100%;
-    height: ~"calc(100vh - 54px)";
+    height: ~"calc(100vh - 254px)";
 
     position: relative;
     display: flex;
     align-items: flex-end;
-
+    &::after {
+      content: "";
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.8) 100%);
+      display: block;
+      width: 100%;
+      height: 200px;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      z-index: 0;
+    }
+    .content-wrapper{
+      position: relative;
+      z-index: 1;
+      width: 100%;
+    }
   }
   .visual__text {
     color: white;
-    padding: 90px 13px;
+    padding: 50px 0;
     font-size: 52px;
-    background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 100%);
-    width: 100%;
+
     font-family: "Raleway";
   }
+  .posts-ctr {
+    margin-top: 30px;
+    .btn-ctr {
+      text-align: center;
+      margin: 20px 0;
+    }
+  }
 }
+
 @media (max-width: 767px) {
   .homepage {
     .visual__text {
 
-      padding: 35px 13px;
+      padding: 35px 0;
       font-size: 40px;
 
     }
