--- a/static/less/_posts.less
+++ b/static/less/_posts.less
@@ -78,123 +78,14 @@
       overflow: hidden;
     }
   }
-}
-
-.line-1 i, .line-3 i {
-  display: block;
-  position: absolute;
-  height: 100%;
-  width: 0;
-  background: white;
-}
-
-.line-1 {
-  left: 0;
-  top: 0
-}
-
-.line-1 i {
-  left: 0;
-  top: 0;
-  transition: width 0.2s ease-out .6s
-}
-
-.line-2 {
-  top: 0;
-  right: 0
-}
-
-.line-2 i {
-  top: 0;
-  left: 0;
-
-  transition: height 0.2s ease-out 0.4s
-}
-
-.line-3 {
-  right: 0;
-  bottom: 0
-}
-
-.line-3 i {
-  right: 0;
-  top: 0;
-
-  transition: width 0.2s ease-out 0.2s
-}
-
-.line-4 {
-  bottom: 0;
-  left: 0
-}
-
-.line-4 i {
-  bottom: 0;
-  left: 0;
-
-  transition: height 0.2s ease-out 0s
-}
-
-.line-2 i, .line-4 i {
-  display: block;
-  position: absolute;
-  width: 100%;
-  height: 0;
-  background: white;
-}
-
-.line-1, .line-3 {
-  width: 100%;
-  height: 2px;
-  background: transparent;
-  position: absolute;
-  z-index: 1;
-}
-
-.line-2, .line-4 {
-  height: 100%;
-  width: 2px;
-  background: transparent;
-  position: absolute;
-  z-index: 1;
-}
-
-.post {
-  &:hover {
-    .line-1 {
-      i {
-        width: 100%;
-        height: 100%;
-        transition: width 0.2s ease-out;
-      }
-    }
-    .line-2 {
-      i {
-        width: 100%;
-        height: 100%;
-        transition: height 0.2s ease-out 0.2s;
-      }
-    }
-    .line-3 {
-
-      i {
-
-        width: 100%;
-        height: 100%;
-        transition: width 0.2s ease-out 0.4s;
-      }
-    }
-    .line-4 {
-
-      i {
-        width: 100%;
-        height: 100%;
-        transition: height 0.2s ease-out .6s;
-      }
-    }
+  &s-title{
+    margin-bottom: 30px;
+    font-size: 30px;
+    font-weight: bold;
 
   }
 }
+
 @media (max-width: 767px) {
   .post {
     &s {
