--- a/fe-web/render/include/menu.hbs
+++ b/fe-web/render/include/menu.hbs
@@ -1,4 +1,4 @@
-<div class="menu-ctr">
+<div class="menu-ctr {{__pagename__}}">
     <div class="nav-trigger">
         <div class="nav-trigger__elements">
             <span></span>
@@ -9,19 +9,28 @@
     <nav class="menu">
         <h2 class="menu__title">stonebridge studio</h2>
         <ul>
-            <li class="menu__item">
+            <li class="menu__item homepage line-effect">
+                <div class="line-2"><i></i></div>
+
+                <div class="line-3"><i></i></div>
                 <a href="/">
                     homepage
                 </a>
             </li>
-            <li class="menu__item">
-                <a href="/photo-gallery">
-                    gallery
+            <li class="menu__item artists line-effect">
+                <div class="line-2"><i></i></div>
+
+                <div class="line-3"><i></i></div>
+                <a href="/artists">
+                    artists
                 </a>
             </li>
-            <li class="menu__item">
-                <a href="/news">
-                    news
+            <li class="menu__item who-we-are line-effect ">
+                <div class="line-2"><i></i></div>
+
+                <div class="line-3"><i></i></div>
+                <a href="/who-we-are">
+                    who we are
                 </a>
             </li>
         </ul>
