--- a/fe-web/render/include/svgs.hbs
+++ b/fe-web/render/include/svgs.hbs
@@ -1,17 +1,13 @@
 <div title="libreria di icone" style="display:none!important;">
     <svg width="0" height="0" style="position:absolute">
         <symbol id=".sprite.facebook" viewBox="-464 266 30 30">
-            <style>.axst0 {
-                fill: #463c44
-            }</style>
-            <path class="axst0"
+
+            <path
                   d="M-445.4 276.4h-2.3c-.3 0-.6.4-.6.8v1.6h2.8v2.3h-2.8v7h-2.7v-7h-2.4v-2.3h2.4v-1.4c0-2 1.4-3.6 3.2-3.6h2.3l.1 2.6z"></path>
         </symbol>
         <symbol id=".sprite.instagram" viewBox="-464 266 30 30">
-            <style>.bmst0 {
-                fill: #463c44
-            }</style>
-            <path id="bmSVGID_1_" class="bmst0"
+
+            <path id="bmSVGID_1_"
                   d="M-451.2 281.1c0-1.2 1-2.2 2.2-2.2s2.2 1 2.2 2.2-1 2.2-2.2 2.2-2.2-1-2.2-2.2m-1.2 0c0 1.9 1.6 3.4 3.4 3.4s3.4-1.6 3.4-3.4-1.6-3.4-3.4-3.4-3.4 1.5-3.4 3.4m6.2-3.6c0 .4.4.8.8.8s.8-.4.8-.8-.4-.8-.8-.8-.8.4-.8.8m-5.5 9c-.7 0-1-.1-1.2-.2-.3-.1-.6-.2-.8-.5-.2-.2-.4-.5-.5-.8-.1-.2-.2-.6-.2-1.2v-2.7-2.7c0-.7.1-1 .2-1.2.1-.3.3-.5.5-.8.2-.2.5-.4.8-.5.2-.1.6-.2 1.2-.2h5.4c.7 0 1 .1 1.2.2.3.1.5.3.8.5.2.2.4.5.5.8.1.2.2.6.2 1.2v5.4c0 .7-.1 1-.2 1.2 0 .3-.2.5-.4.8-.2.2-.5.4-.8.5-.2.1-.6.2-1.2.2h-5.5m0-12.1c-.7 0-1.2.1-1.6.3-.4.2-.8.4-1.2.8-.4.4-.6.8-.8 1.2-.2.4-.3.9-.3 1.6v5.4c0 .7.1 1.2.3 1.6s.4.8.8 1.2.8.6 1.2.8c.4.2.9.3 1.6.3h5.4c.7 0 1.2-.1 1.6-.3.4-.2.8-.4 1.2-.8s.6-.8.8-1.2c.2-.4.3-.9.3-1.6V281v-2.7c0-.7-.1-1.2-.3-1.6-.2-.4-.4-.8-.8-1.2s-.8-.6-1.2-.8c-.4-.2-.9-.3-1.6-.3h-5.4"></path>
         </symbol>
 
