--- a/fe-web/render/layout/index.hbs
+++ b/fe-web/render/layout/index.hbs
@@ -17,7 +17,7 @@
 <body>
 {{> svgs}}
 {{> header}}
-<!--{{> menu}}-->
+{{> menu}}
 <div id="barba-wrapper">
     <div class="barba-container">
         {{> body}}
