--- a/static/css/_dirty.css
+++ b/static/css/_dirty.css
@@ -10,7 +10,7 @@
   height: 1px;
   width: 3px;
   display: inline-block;
-  background-color: #ffffd2;
+  background-color: #fff;
   bottom: 0;
   position: absolute;
   -webkit-animation-duration: 500ms;
