--- a/static/less/_buttons.less
+++ b/static/less/_buttons.less
@@ -1,15 +1,16 @@
+@import "_variables";
 .btn {
   display: inline-block;
   padding: 20px;
-  color: black;
+  color: @saddle-brown;
   font-weight: bold;
   transition: color .4s ease-out;
   &.line-effect {
     i {
-      background: #463c44;
+      background: @brick-red;
     }
   }
   &:hover {
-    color: #463c44;
+    color: @brick-red;
   }
 }
