--- a/static/less/_header.less
+++ b/static/less/_header.less
@@ -1,17 +1,17 @@
-@import "_dirty";
-
+@import "_equalizer";
+@import "_variables";
 .header {
   height: 54px;
   position: fixed;
   width: 100%;
   z-index: 1;
-  background: #463c44;
+  background: @dark-olive-green;
   display: flex;
   justify-content: center;
   .text-ctr {
 
     font-size: 20px;
-    color: white;
+    color: @tan;
 
     text-transform: uppercase;
     h1 {
