--- a/static/less/_posts.less
+++ b/static/less/_posts.less
@@ -28,7 +28,7 @@
   }
   &:hover {
     .post__image {
-      transform: scale(1.05);
+      transform: scale(1.02);
       filter: saturate(1);
     }
     .post__text {
@@ -72,7 +72,7 @@
     width: 100%;
     background: rgba(0, 0, 0, 0.4);
     transform: translateY(100%);
-    transition: all .3s ease-out;
+    transition: all 0.5s ease-out;
     p {
       max-height: 4.2em;
       overflow: hidden;
