--- a/static/less/index.less
+++ b/static/less/index.less
@@ -1,4 +1,5 @@
 @import "_reset";
+@import "_animations";
 @import "_buttons";
 @import "_effect-lines";
 @import "_menu";
@@ -6,12 +7,15 @@
 @import "_posts";
 @import "_footer";
 @import "_header";
+@import "_variables";
+@import "_sprite";
+
 
 body, html {
   //font-family: 'Raleway', sans-serif;
   font-family: 'Open Sans', sans-serif;
   width: 100%;
-  color: #463c44;
+  color: @saddle-brown;
 }
 
 a {
