--- a/static/css/_menu.css
+++ b/static/css/_menu.css
@@ -1,22 +1,39 @@
+extend ' .fadeIn' has no matches
+extend ' .animated' has no matches
 .menu {
   position: fixed;
   z-index: 1;
   top: 0;
   right: 0;
   height: 100vh;
-  padding: 40px 0;
-  background: #930f0a;
+  padding: 40px 20px;
+  background: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  transition: all 400ms ease-out 0s;
+  transition: all 300ms ease-out 0s;
   transform: translateX(100%);
 }
 .menu-ctr {
   position: relative;
 }
+.menu-ctr:before {
+  background: rgba(27, 6, 23, 0.9);
+  transition: all .5s;
+  display: none;
+  content: "";
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1;
+  top: 0;
+  left: 0;
+}
+.menu-ctr.is-navopen:before {
+  display: block;
+}
 .menu__title {
-  color: white;
+  color: #8D615B;
   text-transform: uppercase;
   font-size: 11px;
   margin-bottom: 30px;
@@ -27,16 +44,41 @@
   font-size: 55px;
   font-family: "Raleway";
   text-transform: uppercase;
-  padding: 10px 120px 10px 40px;
+  padding: 20px 120px 20px 40px;
+  transition: all 0.3s ease-out;
 }
-.menu__item:hover {
-  background: rgba(255, 255, 255, 0.1);
+.menu__item .line-3 i {
+  left: 0;
+  transition: width 0.2s ease-out 0s;
+  background: #CCA684;
+}
+.menu__item .line-2 {
+  left: 0;
+  right: inherit;
+}
+.menu__item .line-2 i {
+  left: 0;
+  transition: height 0.2s ease-out 0.2s;
+  background: #CCA684;
+}
+.menu__item:hover .line-3 i {
+  transition: width 0.2s ease-out 0.2s;
+}
+.menu__item:hover .line-2 i {
+  transition: height 0.2s ease-out 0s;
+}
+.menu__item:hover a {
+  color: #CCA684;
 }
 .menu__item a {
-  color: white;
+  line-height: 45px;
+  display: block;
+  color: #8D615B;
+  transition: color 0.3s ease-out;
 }
 .is-navopen .menu {
   transform: translateX(0);
+  transition: all 400ms ease-out 0s;
 }
 .nav-trigger {
   display: block;
@@ -45,12 +87,12 @@
   top: 0;
   padding: 20px 21px;
   z-index: 99;
-  background: rgba(88, 89, 91, 0.6);
+  background: #1B0617;
   cursor: pointer;
   transition: all 0.5s ease-out;
 }
 .nav-trigger:hover {
-  background: rgba(88, 89, 91, 0.9);
+  background: #422030;
 }
 .nav-trigger__elements {
   display: block;
@@ -65,7 +107,7 @@
   position: absolute;
   transform-origin: 0 50%;
   transition-duration: 0.3s;
-  background: white;
+  background: #CCA684;
 }
 .nav-trigger__elements span:nth-of-type(1) {
   top: 0;
