--- a/static/less/_equalizer.less
+++ b/static/less/_equalizer.less
@@ -1,3 +1,4 @@
+@import "_variables";
 .bar-c {
   overflow: hidden;
   height: 30px;
@@ -10,7 +11,7 @@
   height: 1px;
   width: 3px;
   display: inline-block;
-  background-color: #ffffd2;
+  background-color: @tan;
   bottom: 0;
   position: absolute;
 
