--- a/static/less/_menu.less
+++ b/static/less/_menu.less
@@ -1,22 +1,44 @@
+@import "_variables";
+
 .menu {
   position: fixed;
   z-index: 1;
   top: 0;
   right: 0;
   height: 100vh;
-  padding: 40px 0;
-  background: #930f0a;
+  padding: 40px 20px;
+  background:white;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  transition: all 400ms ease-out 0s;
+  transition: all 300ms ease-out 0s;
   transform: translateX(100%);
   &-ctr {
-
     position: relative;
+    &:before {
+      background: fade( @saddle-brown,90);
+      transition: all .5s;
+      display: none;
+      content: "";
+      position: fixed;
+      width: 100vw;
+      height: 100vh;
+
+      z-index: 1;
+      top: 0;
+      left: 0;
+      .fadeIn();
+    }
+    &.is-navopen{
+      &:before {
+        display: block;
+
+
+      }
+    }
   }
   &__title {
-    color: white;
+    color: @dim-gray;
     text-transform: uppercase;
     font-size: 11px;
     margin-bottom: 30px;
@@ -28,19 +50,47 @@
     font-size: 55px;
     font-family: "Raleway";
     text-transform: uppercase;
-    padding: 10px 120px 10px 40px;
+    padding: 20px 120px 20px 40px;
+    transition: all .3s ease-out;
+    .line-3 i {
+      left: 0;
+      transition: width 0.2s ease-out 0s;
+      background: @tan;
+    }
+    .line-2 {
+      left: 0;
+      right: inherit;
+      i {
+        left: 0;
+        transition: height 0.2s ease-out 0.2s;
+        background: @tan;
+      }
+    }
     &:hover {
-      background: rgba(255, 255, 255, 0.1);
+      //background: rgba(255, 255, 255, 0.1);
+      .line-3 i {
+
+        transition: width 0.2s ease-out 0.2s;
+      }
+      .line-2 i {
+
+        transition: height 0.2s ease-out 0s;
+      }
+      a {
+        color: @tan;
+      }
     }
     a {
-
-      color: white;
+      line-height: 45px;
+      display: block;
+      color: @dim-gray;
+      transition: color .3s ease-out;
     }
   }
   .is-navopen & {
     //    right: 0;
     transform: translateX(0);
-
+    transition: all 400ms ease-out 0s;
   }
 }
 
@@ -51,11 +101,11 @@
   top: 0;
   padding: 20px 21px;
   z-index: 99;
-  background: rgba(88, 89, 91, 0.6);
+  background: @saddle-brown;
   cursor: pointer;
   transition: all .5s ease-out;
   &:hover {
-    background: rgba(88, 89, 91, 0.9);
+    background: @dark-olive-green;
   }
   &__elements {
     display: block;
@@ -71,7 +121,7 @@
       transform-origin: 0 50%;
 
       transition-duration: 0.3s;
-      background: white
+      background: @tan;
     }
     span:nth-of-type(1) {
       top: 0;
@@ -106,10 +156,11 @@
   }
 
 }
+
 @media (max-width: 767px) {
   .menu {
     width: 100%;
-    &__item{
+    &__item {
       font-size: 24px;
     }
   }
