--- a/static/less/_sprite.less
+++ b/static/less/_sprite.less
@@ -1,9 +1,15 @@
+@import "_variables";
 .sprite{
   &.facebook {
-    background-position: 98.56099999999999% 77.54528301886792%;
+
     width: 30px;
     height: 30px;
-    fill: #463c44;
+    fill: @dark-olive-green;
   }
+  &.instagram {
 
+    width: 30px;
+    height: 30px;
+    fill: @dark-olive-green;
+  }
 }
