--- a/static/less/_buttons.less
+++ b/static/less/_buttons.less
@@ -5,6 +5,7 @@
   color: @saddle-brown;
   font-weight: bold;
   transition: color .4s ease-out;
+  background:fade(@tan,20);
   &.line-effect {
     i {
       background: @brick-red;
