--- a/static/less/_posts.less
+++ b/static/less/_posts.less
@@ -93,7 +93,7 @@
     }
   }
   &s-title{
-    margin-bottom: 30px;
+    margin-bottom: 50px;
     font-size: 30px;
     font-weight: bold;
 
@@ -104,6 +104,10 @@
   .post {
     &s {
       column-count: 2;
+    }
+    &s-title{
+      margin-bottom: 30px;
+
     }
   }
 }
