--- a/fe-web/render/body/contacts.hbs
+++ b/fe-web/render/body/contacts.hbs
@@ -1,3 +1,5 @@
-<h1>contatti</h1>
-<a href="/">homepage</a>
-<p>questa pagina sono i contatti</p>
+<div class="contacts">
+    <div class="empty">
+        <p> we are working on it! </p>
+    </div>
+</div>
