--- a/static/css/_buttons.css
+++ b/static/css/_buttons.css
@@ -4,6 +4,7 @@
   color: #1B0617;
   font-weight: bold;
   transition: color 0.4s ease-out;
+  background: rgba(204, 166, 132, 0.2);
 }
 .btn.line-effect i {
   background: #C71F49;
