--- a/static/less/index.less
+++ b/static/less/index.less
@@ -9,7 +9,7 @@
 @import "_header";
 @import "_variables";
 @import "_sprite";
-
+@import "_artists";
 
 body, html {
   //font-family: 'Raleway', sans-serif;
@@ -20,6 +20,7 @@ body, html {
 
 a {
   text-decoration: none;
+  color: @saddle-brown;
 }
 
 .content-wrapper {
@@ -39,3 +40,26 @@ a {
 //
 //  overflow: hidden;
 //}
+.empty {
+  height: ~"calc(100vh - 54px)";
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  p {
+    font-size: 55px;
+    text-transform: uppercase;
+    font-family: "Raleway";
+    font-weight: bold;
+  }
+}
+
+@media (max-width: 767px) {
+  .content-wrapper {
+    padding: 0 7px;
+  }
+  .empty{
+    p{
+      font-size: 23px;
+    }
+  }
+}
