--- a/cms/fe-web/render/body/contents.hbs
+++ b/cms/fe-web/render/body/contents.hbs
@@ -1,20 +1,8 @@
-<div class="contents">
-<ul>
-{{#each  entities}}
-    <li>
-        <h2>{{name}}</h2>
-        <ul>
-            {{#each records}}
-                <li>
-                    <a href="/contents/{{id}}">
-                        {{name}}
-                    </a>
-                </li>
-            {{/each}}
-        </ul>
-    </li>
-{{/each }}
+<ul class="contents">
+    {{#entities}}
+        {{>content}}
+
+    {{/entities }}
 
 
 </ul>
-</div>
