--- a/cms/fe-web/render/include/fields/document-field.hbs
+++ b/cms/fe-web/render/include/fields/document-field.hbs
@@ -1,6 +1,6 @@
 <div class="field">
     <fieldset>
-        <legend>document</legend>
+        <legend>{{label}}</legend>
         <input type="file" name="{{name}}" value="{{value}}">
     </fieldset>
 </div>
