--- a/cms/fe-web/render/include/fields/field-builder.hbs
+++ b/cms/fe-web/render/include/fields/field-builder.hbs
@@ -22,8 +22,8 @@
         {{#case "relation" break=true }}
             {{> relation-field}}
         {{/case}}
-        {{#case "repeteable" break=true }}
-            {{> repeteable-field}}
+        {{#case "repeatable" break=true }}
+            {{> repeatable-field}}
         {{/case}}
         {{#case "select" break=true }}
             {{> select-field}}
