--- a/cms/fe-web/render/include/fields/link-field.hbs
+++ b/cms/fe-web/render/include/fields/link-field.hbs
@@ -1,6 +1,6 @@
 <div class="field">
     <fieldset>
-        <legend>link</legend>
-        <input name="{{name}}" type="text">
+        <legend>{{label}}</legend>
+        <input name="{{name}}" type="url">
     </fieldset>
 </div>
