--- a/cms/fe-web/render/include/stylesheet.hbs
+++ b/cms/fe-web/render/include/stylesheet.hbs
@@ -1,1 +1,2 @@
+<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 <link href="/static/css/index.css" rel="stylesheet">
