--- a/cms/static/less/_common.less
+++ b/cms/static/less/_common.less
@@ -1,4 +1,32 @@
+body,html{
+  font-family: 'Roboto', sans-serif;
+}
 .content-wrapper {
   max-width: 1280px;
   margin: 0 auto;
+}
+fieldset {
+  background: lightcyan;
+  padding: 10px;
+}
+input[type=text] {
+  width: 100%;
+  display: block;
+  border: 0;
+  padding: 7px;
+  margin: 0;
+  box-sizing: border-box;
+  border-bottom: 1px solid silver;
+  background: lightcyan;
+  outline: none!important;
+}
+legend {
+  padding: 10px 0 0;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: gray;
+   span,button {
+    display: inline-block;
+    vertical-align: middle;
+  }
 }
