--- a/cms/fe-web/render/include/fields/repeatable-field.hbs
+++ b/cms/fe-web/render/include/fields/repeatable-field.hbs
@@ -1,4 +1,7 @@
 <div class="field">
+    <script data-json type="application/json">
+        {{{json fields}}}
+    </script>
     <fieldset>
         <legend>
             <button>add</button>
@@ -6,10 +9,6 @@
 
         </legend>
 
-        <ul class="fields">
-            {{#fields}}
-                {{> field-builder this}}
-            {{/fields}}
-        </ul>
+
     </fieldset>
 </div>
