--- a/cms/fe-web/render/body/new-contents.hbs
+++ b/cms/fe-web/render/body/new-contents.hbs
@@ -1,3 +1,4 @@
+<form name="newContent" method="post" action="/contents/save">
 <input type="hidden" name="contentId" value="{{contentId}}">
 <ul class="fields">
     {{#fields}}
@@ -6,4 +7,4 @@
 
 </ul>
 <button>SAVE</button>
-<a href="">BACK</a>
+<a href="">BACK</a></form>
