--- a/cms/fe-web/render/include/fields/text-field.hbs
+++ b/cms/fe-web/render/include/fields/text-field.hbs
@@ -1,6 +1,6 @@
 <div class="field">
     <fieldset>
         <legend>{{label}}</legend>
-        <input name="{{name}}" type="text" value="{{value}}">
+        <input placeholder="{{label}}" name="{{name}}" type="text" value="{{value}}">
     </fieldset>
 </div>
